<resources>
    <string name="app_name">ANT Token</string>
    <string name="hello_blank_fragment">                  Hello blank fragment</string>
    <string name="System_in_hurry">                       登录失效,请重新登录</string>
    <string name="System_in_impose">                      红包已经限额,明日早来</string>
    <string name="System_in_up">                          系统维护中</string>
    <string name="System_in_sorry">                       给您带来的不便，敬请谅解</string>
    <string name="System_in_get">                         积分不足或领取上限</string>
    <string name="System_in_error">                       暂未开放</string>
    <string name="System_error">                          请关注服务器开启时间!!</string>
    <string name="Network_error">                         请检查网络链接是否正常!!</string>
    <string name="Allocation_success">                    分配成功</string>
    <string name="SSM">                                   发送成功</string>
    <string name="Out_copyok">                            复制成功</string>
    <string name="Home_invite">                           邀请码:</string>
    <string name="nameup">                                名字不能为空</string>
    <string name="namenode">                              接点绑定</string>
    <string name="nation">                                国家选择</string>
    <string name="Node_message">                          接点信息</string>
    <string name="Node_activate">                         确认激活好友</string>
    <string name="Node_search">                           搜索</string>
    <string name="Node_affirm">                           请确认接点信息无误，一旦激活将无法修改</string>
    <string name="Node_mark">                             接点标示</string>
    <string name="Node_markinput">                        请输入接点标示</string>
    <string name="nameuptwo">                             名字不能超过6位字符</string>
    <string name="Node_Error">                            接点输入有误，请确认接点</string>
    <string name="Welcome_error">                         取消</string>
    <string name="Welcome_abandon">                         放弃</string>
    <string name="hadeup_error">                          操作有误,请从新操作</string>
    <string name="Welcome_succeed">                       确定</string>
    <string name="reception">                       接受</string>
    <string name="Welcome_update">                        检查更新</string>
    <string name="Welcome_jump">                          点击跳过</string>
    <string name="Welcome_download">                      检测到新版本，点击下载更新</string>
    <string name="Welcome_authority">                     去手动授权</string>
    <string name="Welcome_hint">                          备份通讯录需要访问 “通讯录” 和 “外部存储器”，请到 “应用信息 -> 权限” 中授予！</string>
    <string name="Home_error">                            二维码格式不正确</string>
    <string name="Login_button">                          登录</string>
    <string name="Login_register">                        注册</string>
    <string name="Login_forGetpwd">                       忘记密码?</string>
    <string name="Login_loginType">                       保存登录状态</string>
    <string name="Login_phone">                           手机号码:</string>
    <string name="Login_phon2323e">                           手机号码</string>
    <string name="Login_invite">                          邀请码:</string>
    <string name="Login_invite1">                         请输入邀请码</string>
    <string name="Login_pwd">                             登录密码:</string>
    <string name="Login_phoneType2">                      中国+</string>
    <string name="Login_phoneType1">                      86  </string>
    <string name="Login_error">                           账号或者密码错误</string>
    <string name="Login_userpwdError">                    请输入用户名和密码</string>
    <string name="Login_userError">                       请输入用户名</string>
    <string name="Login_pwdError">                        请输入密码</string>
    <string name="Register_confirm">                      确定</string>
    <string name="Register_nickName">                     昵称:</string>
    <string name="Register_Invitation">                   同意ANT用户使用协议 </string>
    <string name="Register_next">                         下一步 </string>
    <string name="Register_verification">                 验证码：</string>
    <string name="Register_succeed">                      注册成功</string>
    <string name="Register_phone">                        手机号码：</string>
    <string name="Register_loginpwd">                     设置登录密码：</string>
    <string name="Register_loginpwds">                    确定登录密码：</string>
    <string name="Register_ok">                           完成</string>
    <string name="Register_no">                           未完成</string>
    <string name="Register_paymentpwd">                   设置交易密码:</string>
    <string name="Register_paymentpwds">                  确定交易密码:</string>
    <string name="Register_getverification">              获取验证码</string>
    <string name="Register_verificationimport">           请输入验证码</string>
    <string name="Register_userPhoneerror">               请输入正确的电话号码</string>
    <string name="Register_userNameerror">                请输出正确的电话号码</string>
    <string name="Register_userPwderror">                 两次登录密码不一致，请重新输入</string>
    <string name="Register_userpwderrors">                两次登录密码不一致，请重新输入</string>
    <string name="UserfindPwd_pwdimport">                 设置新密码:</string>
    <string name="UserfindPwd_pwdimports">                确定新密码:</string>
    <string name="UserfindPwd_succeed1">                  重置密码</string>
    <string name="UserfindPwd_succeed">                   密码重置成功</string>
    <string name="UserfindPwd_pwdError">                  两次密码不一致</string>
    <string name="UserfindPwd_userError">                 请填写完整信息再试</string>
    <string name="Home_friend">                           社区好友</string>
    <string name="Home_balance">                          通证数量</string>
    <string name="Home_property">                         资产信息</string>
    <string name="Home_performance">                      通证服务</string>
    <string name="Home_live">                             生活服务</string>
    <string name="Home_tong1">                            资产数量</string>
    <string name="Home_sao">                              转  账</string>
    <string name="Home_shou">                             收款码</string>
    <string name="Home_jia">                              红  包</string>
    <string name="Home_t1">                               POS权益</string>
    <string name="Home_t2">                               T1节点</string>
    <string name="Home_node">                             节点</string>
    <string name="Home_refuel">                           福利大转盘</string>
    <string name="Home_book">                             商户收款码</string>
    <string name="Home_telephone">                        商城</string>
    <string name="Home_taking">                           云购</string>
    <string name="Home_game">                             闪兑</string>
    <string name="Home_take">                             众筹</string>
    <string name="Home_information">                      资讯</string>
    <string name="Home_more1">                            认购</string>
    <string name="Home_more">                             邀请卡</string>
    <string name="Home_T2">                               T2节点</string>
    <string name="Home_zhitui">                           DPOS权益</string>
    <string name="Home_success">                          领取成功</string>
    <string name="get_red">                          领取</string>
    <string name="Business_application">                          商家申请</string>
    <string name="already_received">                          已领取</string>
    <string name="yishengq">                          您已经是ANT商家，无需重复申请</string>
    <string name="already_shenqing">                          \t\t 申请开通ANT商家需要不低于20000RUB的信誉押金，存入本账号绑定的Ruby钱包蚂蚁理财宝后，提交申请。</string>
    <string name="Applyimmediately">                         立即申请</string>
    <string name="Home_earnings">                         昨日奖励</string>
    <string name="Home_announcement">                     系统公告：各大币种支持提币、转账</string>
    <string name="Home_renz">                             个人中心</string>
    <string name="Home_anq">                              私钥管理</string>
    <string name="Home_xx">                               消息中心</string>
    <string name="Home_banb">                             版本检测</string>
    <string name="language_settings">                             语言设置</string>
    <string name="Mycomm_t1">                             ANT ID</string>
    <string name="Mycomm_copy">                           (点击复制)</string>
    <string name="Mycomm_performance">                     业绩详情</string>
    <string name="Mycomm_friend">                          查看我的好友</string>
    <string name="Loginup_oldpwd">                         旧密码:</string>
    <string name="Loginup_oldpwdinput">                    请输入旧密码</string>
    <string name="Loginup_newspwd">                        新密码:</string>
    <string name="Loginup_newspwdinput">                   请输入新密码</string>
    <string name="Loginup_affirmnewpwd">                   确认密码:</string>
    <string name="Loginup_affirmnewpwdinput">              请确认密码</string>
    <string name="Loginup_submit">                         提交</string>
    <string name="FindPay_ok">                             确认修改</string>
    <string name="FindPay_pay">                            支付密码</string>
    <string name="AnswerIssueHint">                         请回答以下问题，所有题目均为单选题。</string>
    <string name="AnswerIssueSubmit">                       提交答案</string>
    <string name="AnswerIssue1">                            1.私钥是您个人在链上的唯一的身份凭证，若私钥丢失或忘记私钥密码，将无法通过任何途径进行找回？</string>
    <string name="AnswerIssueAnsuer1">                      私钥采用“椭圆曲线加密算法”生成，以普通计算机的计算能力,私钥如若丢失，将无法找回。</string>
    <string name="AnswerIssueAnsuer2">                      丢失后，可以使用手机号码和验证码进行找回。</string>
    <string name="AnswerIssue2">                            2.在《ANT Token》中创建的私钥，若我不慎遗失，可以通过联系客服，并且提供手机号码，验证码，钱包地址进行找回？</string>
    <string name="AnswerIssue2Ansuer1">                     无法找回，《ANT Token》使用的所有私钥均又用户生成时使用的设备进行计算而来，作为一个“去中心化”的Dapp，《ANT Token》并未备份任何用户私钥。</string>
    <string name="AnswerIssue2Ansuer2">                     是的，可以通过ANT私钥安全中心进行找回。</string>
    <string name="AnswerIssue3">                            3.私钥、公钥、地址之间的概念描述正确的是？</string>
    <string name="AnswerIssue3Ansuer1">                     私钥、公钥，地址之间可以进行随意转换，只要知道其 中一项则可以推算其他任意两项。</string>
    <string name="AnswerIssue3Ansuer2">                     一个私钥可以对应多个公钥，而每个公钥可以对应一个 地址，地址是通过公钥进行一些数学逻辑变换转换而来， 在交易对方知晓地址或者公钥时无法推算私钥，而知晓私 钥，则可以推算公钥与地址。</string>
    <string name="AnswerIssue3Ansuer3">                     交易发送者在发送交易时候，只需要提供公钥的签名即可完成交易的发出，或者资产的转移。</string>
    <string name="AnswerIssue4">                            4.如果用户不慎遗失私钥，会有什么后果？</string>
    <string name="AnswerIssue4Ansuer1">                     失去私钥，变等同于失去唯一凭证，私钥对应的地址内的所有资产将永久遗失，没有任何方法进行转移与交易。也无法通过任何外界手段进行资产的找回。</string>
    <string name="AnswerIssue4Ansuer2">                     没有什么后果，重新生成一个新的私钥和地址，把资产进行转移即可。</string>
    <string name="AnswerIssue5">                            5.若用户公开公钥，会不会有隐私泄露的问题？</string>
    <string name="AnswerIssue5Ansuer2">                     区块链具有“匿名性”特点，除用户公开承认和证明某个地址的私钥归自身所拥有，否则没有任何方式知晓持有地址资产的用户的真实信息。完全不需要担心隐私泄露问题。</string>
    <string name="SavedOffline">                      离线保存</string>
    <string name="networkTransmission">                      请勿使用网络传输</string>
    <string name="networkTransmissionhint">                       请勿通过网络工具传输Keystore文件，一旦被黑客获取将造成不可挽回的资产损失</string>
    <string name="networkTransmissionhint1">                        如需在线保存，则建议使用安全等级更高的密码保管软件来保存Keystore。</string>
    <string name="Passwordsafe">                      密码保险箱保存</string>
    <string name="CopyTheKeystore">                      复制Keystore</string>
    <string name="copySavedOffline">                      请复制粘贴keystore文件到安全、离线的地方保存。请勿保存至邮箱、记事本、网盘导航聊天工具等，非常危险。</string>
</resources>