<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appbackground"
    tools:context="com.example.administrator.mode.Activity.privatekeymanage.DeriveKeyStoreActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include layout="@layout/tit" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical">

            <TextView
                style="@style/textview14sp"
                android:text="@string/SavedOffline" />

            <TextView
                style="@style/textview12sp"
                android:layout_marginTop="8dp"
                android:text="@string/copySavedOffline" />
            <TextView
                style="@style/textview14sp"
                android:layout_marginTop="8dp"
                android:text="@string/networkTransmission" />

            <TextView
                style="@style/textview12sp"
                android:layout_marginTop="8dp"
                android:text="@string/networkTransmissionhint" />
            <TextView
                style="@style/textview14sp"

                android:layout_marginTop="8dp"
                android:text="@string/Passwordsafe" />

            <TextView
                style="@style/textview12sp"
                android:layout_marginTop="8dp"
                android:text="@string/networkTransmissionhint1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/view_frameaaa">

                <TextView
                    android:id="@+id/copyKeyStore"
                    style="@style/textview14"
                    android:layout_margin="8dp"
                    android:text=""
                    android:textColor="#333333"
                    android:textSize="12sp" />
            </LinearLayout>

            <Button
                android:id="@+id/copyKeystore"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/essential"
                android:text="@string/CopyTheKeystore"
                android:textColor="#ffff"
                android:textSize="15sp" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
