<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/appbackground"
    android:layout_height="match_parent"
    tools:context=".Activity.drawer.SecurityPayUpActivity">
    <include layout="@layout/tit" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/afragment"
        android:orientation="horizontal">

        <TextView
            style="@style/textview"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="45px"
            android:layout_weight="1"
            android:textSize="15sp"
            android:text="@string/Loginup_oldpwd" />

        <EditText
            android:id="@+id/payup_oldpwd"
            android:inputType="textPassword"
            android:layout_gravity="center_vertical"
            android:textSize="15sp"
            android:layout_marginRight="45px"
            android:hint="@string/Loginup_oldpwdinput"
            style="@style/edittext" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/afragment"
        android:orientation="horizontal">

        <TextView
            style="@style/textview"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="45px"
            android:textSize="15sp"
            android:layout_weight="1"
            android:text="@string/Loginup_newspwd" />

        <EditText
            android:id="@+id/payup_newpwd"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="45px"
            android:hint="@string/Loginup_newspwdinput"
            style="@style/edittext"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/afragment"
        android:orientation="horizontal">

        <TextView
            style="@style/textview"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="45px"
            android:textSize="15sp"
            android:layout_weight="1"
            android:text="@string/Loginup_affirmnewpwd" />

        <EditText
            android:id="@+id/payup_affirmnewpwd"
            android:layout_gravity="center_vertical"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:layout_marginRight="45px"
            android:hint="@string/Loginup_affirmnewpwdinput"
            style="@style/edittext" />
    </LinearLayout>

    <Button
        android:id="@+id/payup_submit"
        android:layout_width="984px"
        android:layout_height="114px"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="270px"
        android:background="@drawable/butt"
        android:text="@string/Loginup_submit"
        android:textColor="@color/grayf2"
        android:textSize="46px" />
</LinearLayout>